se desactivo el boton del cv
- falta agregar 2 nuevos cursos para el CV

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
         </div>
     </header>
 
-    <div class="button-cv">
+    <!-- skip momentaneo hasta actualizar CV -->
+    <!-- <div class="button-cv">
         <a href="assets/CV-Ganne-Moreno-Pablo-Matias.pdf" download class="download-link">
             <button class="animated-download">
                 <span class="icon">
@@ -67,7 +68,7 @@
                 <span class="text">Download CV</span>
             </button>
         </a>
-    </div>
+    </div> -->
 
     <nav class="navbar">
         <div class="navbar-content">
