--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 
             <div class="main-text fade-in-left">
                 <h3>
-                    Me gusta aprender haciendo. Cuando encuentro algo que me interesa, disfruto replicarlo: una
-                    animación, un diseño, una funcionalidad. Esa curiosidad me impulsa a experimentar y a descubrir
+                    Soy una persona curiosa y autodidacta: cuando algo me interesa, disfruto replicarlo, ya sea una
+                    animación, un diseño o una funcionalidad. Esa curiosidad me impulsa a experimentar y descubrir
                     nuevas herramientas.
                 </h3>
                 <h3>
